# forge

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile.agent  Dockerfile.agent-rust  Dockerfile.runner-env-rust  Dockerfile.sidecar  README.md  agent-plugins.conf  docker-compose.workers.yml  docker-compose.yml  flavors.conf
action/: agent-work.yml  ci-rust.yml  review-work.yml
crates/cdc/: CLAUDE.md
crates/cdc/src/: main.rs
crates/cli/: CLAUDE.md  Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/workers/: action.rs  cli.rs  interactive.rs  mod.rs  sim.rs
crates/integration/: Cargo.toml
crates/integration/tests/: seed.rs
crates/reviewer/: CLAUDE.md  Cargo.toml
crates/reviewer/src/: main.rs
crates/sidecar/: CLAUDE.md  Cargo.toml
crates/sidecar/src/: api.rs  config.rs  consumer.rs  coord.rs  dispatcher.rs  error.rs  events.rs  forgejo.rs  graph.rs  main.rs  monitor.rs
crates/sidecar/static/: CLAUDE.md  graph.html  terminal.html
crates/types/: CLAUDE.md
crates/types/src/: lib.rs
crates/worker/: CLAUDE.md
crates/worker/src/: client.rs  dispatch.rs  forgejo.rs  worker.rs
demo/fixtures/: forge-frontend.json
infra/: CLAUDE.md
infra/agent/: download-plugins.sh  git-credential-forgejo.sh
infra/dev/: main.tf  variables.tf
infra/modules/forgejo-init/: main.tf  variables.tf
infra/test/: main.tf  variables.tf
scripts/: init.sh  workers.sh
