[package]
name = "workflow-reviewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "workflow-reviewer"
path = "src/main.rs"

[dependencies]
workflow-types = { path = "../types" }
workflow-worker = { path = "../worker" }

anyhow = { workspace = true }
async-nats = { workspace = true }
chrono = { workspace = true }
dashmap = "6"
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
